# evote

./: .gitignore  README.md  pyproject.toml
src/: app.py  helper.py  style_prompt.py  votes.py
