[tool.poetry]
name = "evote"
version = "0.1.0"
description = "A voting app made for the Earth"
authors = ["crafzdog"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.10,<3.14"
questionary = "^2.1.0"
rich = "^13.9.4"
pyinstaller = "^6.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
